--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@ img.emoji {
 			
 </head>
 <body class="home page-template-default page page-id-4337 post-name-gal_huto post-type-page sidebar-fix bootstrap4 device-pc fa_v5_css">
-<div class="vk-mobile-nav-menu-btn">MENU</div><div class="vk-mobile-nav"><nav class="global-nav"><ul id="menu-%e3%83%a1%e3%83%8b%e3%83%a5%e3%83%bc-1" class="vk-menu-acc  menu"><li id="menu-item-4846" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4846"><a href="gal_niso.html">ニーソ美脚</a></li>
-<li id="menu-item-5025" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5025"><a href="gal_light.html">明るい美脚</a></li>
-<li id="menu-item-4832" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4832"><a href="gal_nama.html">生足美脚</a></li>
-<li id="menu-item-4855" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4855"><a href="gal_black.html">黒い美脚</a></li>
-<li id="menu-item-3341" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3341"><a href="about.html">脚フェチGalleryとは</a></li>
+<div class="vk-mobile-nav-menu-btn">MENU</div><div class="vk-mobile-nav"><nav class="global-nav"><ul id="menu-%e3%83%a1%e3%83%8b%e3%83%a5%e3%83%bc-1" class="vk-menu-acc  menu"><li id="menu-item-4846" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4846"><a href="gal_niso.html">美腿</a></li>
+<li id="menu-item-5025" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5025"><a href="gal_light.html">美脚</a></li>
+<li id="menu-item-4832" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4832"><a href="gal_nama.html">裸足美脚</a></li>
+<li id="menu-item-4855" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4855"><a href="gal_black.html">黑丝美脚</a></li>
+<li id="menu-item-3341" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3341"><a href="about.html">关于我爱脚Galleryとは</a></li>
 <li id="menu-item-3342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3342"><a href="http://www.szre.xyz/">美女热楼凤</a>
 
 </li>
