--- a/gal_black.html
+++ b/gal_black.html
@@ -94,17 +94,13 @@ img.emoji {
 			
 </head>
 <body class="page-template page-template-page-onecolumn page-template-page-onecolumn-php page page-id-4853 post-name-gal_black post-type-page sidebar-fix bootstrap4 device-pc fa_v5_css">
-<div class="vk-mobile-nav-menu-btn">MENU</div><div class="vk-mobile-nav"><nav class="global-nav"><ul id="menu-%e3%83%a1%e3%83%8b%e3%83%a5%e3%83%bc-1" class="vk-menu-acc  menu"><li id="menu-item-4846" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4846"><a href="gal_niso.html">ニーソ美脚</a></li>
-<li id="menu-item-5025" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5025"><a href="gal_light.html">明るい美脚</a></li>
-<li id="menu-item-4832" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4832"><a href="gal_nama.html">生足美脚</a></li>
-<li id="menu-item-4855" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-4853 current_page_item menu-item-4855"><a href="" aria-current="page">黒い美脚</a></li>
-<li id="menu-item-3341" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3341"><a href="about.html">脚フェチGalleryとは</a></li>
-<li id="menu-item-3342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3342"><a href="index1.html">ハダカJapan</a>
-<ul class="sub-menu">
-	<li id="menu-item-4516" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4516"><a href="index2.html">ハダカちゃんねる</a></li>
-	<li id="menu-item-3352" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3352"><a href="index3.html">ハダカのブログ</a></li>
-	<li id="menu-item-3353" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3353"><a href="index4.html">ハダカSearch</a></li>
-</ul>
+<div class="vk-mobile-nav-menu-btn">MENU</div><div class="vk-mobile-nav"><nav class="global-nav"><ul id="menu-%e3%83%a1%e3%83%8b%e3%83%a5%e3%83%bc-1" class="vk-menu-acc  menu"><li id="menu-item-4846" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4846"><a href="gal_niso.html">美腿</a></li>
+<li id="menu-item-5025" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5025"><a href="gal_light.html">美脚</a></li>
+<li id="menu-item-4832" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4832"><a href="gal_nama.html">裸足美脚</a></li>
+<li id="menu-item-4855" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-4853 current_page_item menu-item-4855"><a href="" aria-current="page">黑丝美脚</a></li>
+<li id="menu-item-3341" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3341"><a href="#">我爱脚</a></li>
+<li id="menu-item-3342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3342"><a href="http://www.69re.me/">美女热楼凤</a>
+
 </li>
 </ul></nav></div><header class="siteHeader">
 		<div class="container siteHeadContainer">
