--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@ img.emoji {
 <li id="menu-item-4832" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="gal_nama.html"><strong class="gMenu_name">裸足美脚</strong></a></li>
 <li id="menu-item-4855" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="gal_black.html"><strong class="gMenu_name">黑丝美脚</strong></a></li>
 <li id="menu-item-3341" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-2 current_page_item"><a href=""><strong class="gMenu_name">关于我爱脚</strong></a></li>
-<li id="menu-item-3342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children"><a href="http://www.szre.xyz/"><strong class="gMenu_name">美女热楼凤</strong></a>
+<li id="menu-item-3342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children"><a href="http://www.69re.me/"><strong class="gMenu_name">美女热楼凤</strong></a>
 
 </li>
 </ul></nav></div>	</div>
@@ -134,7 +134,7 @@ img.emoji {
 <div class="row">
 <ol class="breadcrumb" itemtype="http://schema.org/BreadcrumbList"><li id="panHome" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a itemprop="item" href="index.html"><span itemprop="name"><i class="fa fa-home"></i> HOME</span></a></li><li><span>我爱脚</span></li></ol>
 </div>
-<a href="http://www.szre.xyz/" rel="nofollow" title=""><img src="haibao/haibao2.png" width="1140" height="100"/></a>
+<a href="http://www.69re.me/" rel="nofollow" title=""><img src="haibao/haibao2.png" width="1140" height="100"/></a>
 </div>
 </div>
 <!-- [ /.breadSection ] -->
