--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ img.emoji {
 			<div class="col-md-4"></div><div class="col-md-4"></div><div class="col-md-4"></div>		</div>
 	</div>
 	<div class="container sectionBox copySection text-center">
-			<p>Copyright &copy; 我爱脚。</p>	</div>
+			<p>Copyright &copy; 我爱脚。</p>	<script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278851610&web_id=1278851610"></script></div>
 			<p> 
 <a href="http://www.62xyz.com/?qing" target="_blank"><b>妞儿xyz导航站</b></a>
 <a href="http://www.99fldh.vip/?qing" target="_blank"><b> 99福利导航</b></a>
