--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ img.emoji {
 <li id="menu-item-4832" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4832"><a href="gal_nama.html">生足美脚</a></li>
 <li id="menu-item-4855" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4855"><a href="gal_black.html">黒い美脚</a></li>
 <li id="menu-item-3341" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3341"><a href="about.html">脚フェチGalleryとは</a></li>
-<li id="menu-item-3342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3342"><a href="http://www.69re.me/">美女热楼凤</a>
+<li id="menu-item-3342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3342"><a href="https://www.69re.ee/">美女热找辣妹</a>
 
 </li>
 </ul></nav></div><header class="siteHeader">
@@ -118,7 +118,7 @@ img.emoji {
 <li id="menu-item-4832" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="gal_nama.html"><strong class="gMenu_name">裸足美脚</strong></a></li>
 <li id="menu-item-4855" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="gal_black.html"><strong class="gMenu_name">黑丝美脚</strong></a></li>
 <li id="menu-item-3341" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="about.html"><strong class="gMenu_name">关于我爱脚</strong></a></li>
-<li id="menu-item-3342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children"><a href="https://www.69re.me/"><strong class="gMenu_name">美女热楼凤</strong></a>
+<li id="menu-item-3342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children"><a href="https://www.69re.ee/"><strong class="gMenu_name">美女热找辣妹</strong></a>
 
 </li>
 </ul></nav></div>	</div>
@@ -131,7 +131,7 @@ img.emoji {
 
 			<div class="col mainSection mainSection-col-one" >
 
-			<a href="https://www.69re.me/" rel="nofollow" title=""><img src="haibao/haibao2.png" width="1140" height="100"/></a>
+			<a href="https://www.69re.ee/" rel="nofollow" title=""><img src="haibao/haibao2.png" width="1140" height="100"/></a>
 							
 	</div>			
 			
