--- a/gal_light.html
+++ b/gal_light.html
@@ -99,7 +99,7 @@ img.emoji {
 <li id="menu-item-4832" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4832"><a href="gal_nama.html">生足美脚</a></li>
 <li id="menu-item-4855" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4855"><a href="gal_black.html">黒い美脚</a></li>
 <li id="menu-item-3341" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3341"><a href="about.html">脚フェチGalleryとは</a></li>
-<li id="menu-item-3342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3342"><a href="http://www.69re.ee">美女热找辣妹</a>
+<li id="menu-item-3342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3342"><a href="https://www.69re.ee">美女热找辣妹</a>
 
 </li>
 </ul></nav></div><header class="siteHeader">
